package com.github.studeasy.logic.common.role;

/**
 * Role which describe the user
 */
public abstract class Role {}